[package]
name = "venom"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
byteorder = "1"
bindings = { package = "rs_shellcode_bindings", path = "../rs_shellcode/bindings" }
rand = "0.8.3"